--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-    },
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Food-Ashur-s/Food-Ashurs-Full-App.git"
@@ -22,5 +22,27 @@
   "bugs": {
     "url": "https://github.com/Food-Ashur-s/Food-Ashurs-Full-App/issues"
   },
-  "homepage": "https://github.com/Food-Ashur-s/Food-Ashurs-Full-App"
+  "homepage": "https://github.com/Food-Ashur-s/Food-Ashurs-Full-App",
+  "dependencies": {
+    "@reduxjs/toolkit": "^1.2.5",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "eslint": "^6.8.0",
+    "gh-pages": "^2.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "node-sass": "^4.13.1",
+    "react": "^16.13.1",
+    "react-cookies": "^0.1.1",
+    "react-dom": "^16.13.1",
+    "react-hookstore": "^1.4.3",
+    "react-jsonschema-form": "^1.8.1",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.4.0",
+    "react-test-renderer": "^16.13.1",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-mock-store": "^1.5.4",
+    "redux-thunk": "^2.3.0"
+  }
 }
