--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Food-Ashurs-Full-App",
   "version": "1.0.0",
   "description": "# Food-Ashurs - Application that takes extra food from local restaurants and gives it to people or charities of need.  This helps save wasted food and assists in the wellness of the local community.",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -22,7 +22,7 @@
   "bugs": {
     "url": "https://github.com/Food-Ashur-s/Food-Ashurs-Full-App/issues"
   },
-  "homepage": "https://github.com/Food-Ashur-s/Food-Ashurs-Full-App#readme",
+  "homepage": "https://Nsuliman.github.io/Food-Ashur-s/Food-Ashurs-Full-App",
   "dependencies": {
     "@reduxjs/toolkit": "^1.2.5",
     "enzyme": "^3.11.0",
