--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
     "gh-pages": "^2.2.0",
+    "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
@@ -39,6 +40,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
     "react-test-renderer": "^16.13.1",
+    "react-wow": "^1.0.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-mock-store": "^1.5.4",
