--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^16.13.1",
     "react-cookies": "^0.1.1",
     "react-dom": "^16.13.1",
+    "react-google-login": "^5.1.2",
     "react-hookstore": "^1.4.3",
     "react-jsonschema-form": "^1.8.1",
     "react-redux": "^7.2.0",
