--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^16.13.1",
     "react-hookstore": "^1.4.3",
     "react-jsonschema-form": "^1.8.1",
+    "react-loader-spinner": "^3.1.5",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
