--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/Food-Ashur-s/Food-Ashurs-Full-App",
   "dependencies": {
     "@reduxjs/toolkit": "^1.2.5",
+    "aos": "^2.3.4",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
