--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
   },
   "homepage": "https://github.com/Food-Ashur-s/Food-Ashurs-Full-App",
   "dependencies": {
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "@reduxjs/toolkit": "^1.2.5",
     "aos": "^2.3.4",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
+    "font-awesome": "^4.7.0",
     "gh-pages": "^2.2.0",
     "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
@@ -36,6 +38,7 @@
     "react-cookies": "^0.1.1",
     "react-dom": "^16.13.1",
     "react-hookstore": "^1.4.3",
+    "react-icons": "^3.9.0",
     "react-jsonschema-form": "^1.8.1",
     "react-loader-spinner": "^3.1.5",
     "react-redux": "^7.2.0",
