--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/Food-Ashur-s/Food-Ashurs-Full-App",
   "dependencies": {
     "@reduxjs/toolkit": "^1.2.5",
+    "@withvoid/melting-pot": "^1.6.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
@@ -40,10 +41,14 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
     "react-test-renderer": "^16.13.1",
+    "react-use-localstorage": "^3.4.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-mock-store": "^1.5.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.0.1",
+    "use-immer": "^0.3.5",
+    "use-socket.io-client": "^1.1.0"
   },
   "browserslist": {
     "production": [
