--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^16.13.1",
     "react-google-login": "^5.1.2",
     "react-hookstore": "^1.4.3",
+    "react-images-upload": "^1.2.8",
     "react-jsonschema-form": "^1.8.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
