--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jsonwebtoken": "^8.5.1",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
+    "react-chat-popup": "^1.1.2",
     "react-chat-widget": "^2.1.5",
     "react-cookies": "^0.1.1",
     "react-dom": "^16.13.1",
