--- a/package.json
+++ b/package.json
@@ -33,15 +33,18 @@
     "gh-pages": "^2.2.0",
     "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
+    "justgage": "^1.3.5",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-cookies": "^0.1.1",
+    "react-d3-speedometer": "^0.10.1",
     "react-dom": "^16.13.1",
+    "react-gauge-chart": "^0.2.5",
     "react-google-login": "^5.1.2",
     "react-hookstore": "^1.4.3",
-    "react-images-upload": "^1.2.8",
     "react-icons": "^3.9.0",
     "react-id-swiper": "^3.0.0",
+    "react-images-upload": "^1.2.8",
     "react-jsonschema-form": "^1.8.1",
     "react-loader-spinner": "^3.1.5",
     "react-redux": "^7.2.0",
@@ -49,6 +52,7 @@
     "react-scripts": "^3.4.0",
     "react-slider-swiper": "^2.0.6",
     "react-social-login-buttons": "^3.0.0",
+    "react-svg-gauge": "^1.0.10",
     "react-test-renderer": "^16.13.1",
     "react-wow": "^1.0.0",
     "redux": "^4.0.5",
