--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "react-chat-widget": "^2.1.5",
     "react-cookies": "^0.1.1",
     "react-dom": "^16.13.1",
+    "react-emoji": "^0.5.0",
     "react-hookstore": "^1.4.3",
     "react-jsonschema-form": "^1.8.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
+    "react-scroll-to-bottom": "^1.3.2",
     "react-test-renderer": "^16.13.1",
     "react-use-localstorage": "^3.4.1",
     "redux": "^4.0.5",
